k8s/apps/Frontend/Frontend-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-frontend-svc
  namespace: chat-app-namespace
spec:
  selector:
    app: chat-app-frontend-pod
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
  type: NodePort
