k8s/apps/Frontend/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  namespace: chat-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: chat.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-app-backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app-frontend-svc
                port:
                  number: 80
